# first-tutorial

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  add.cpp  add.h  cmake_install.cmake  foo.cpp  foo.h  goo.cpp  goo.h  main.cpp
.cmake/api/v1/reply/: cache-v2-6b3d87f4e0041da5cd2d.json  cmakeFiles-v1-a9d6eda95293e84b6065.json  codemodel-v2-211c6d5ed4701392c686.json  codemodel-v2-2656295dbe7b58ba3557.json  index-2023-11-04T07-34-51-0048.json  index-2023-11-06T11-50-53-0552.json  target-First_tutorial-Debug-3b7be62e8d881a86e3bf.json  target-First_tutorial-Debug-bb01d2b10586c311dfbe.json
